--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,6 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(Trails Game/Game.cpp
         Game/BattleManager.cpp
         Game/BattleManager.h
+        Game/Character.cpp
+        Game/Character.h
 )
