--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,12 @@ project(Trails)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(Trails Game/Game.cpp
-        Game/BattleManager.cpp
-        Game/BattleManager.h
-        Game/Character.cpp
-        Game/Character.h
+        Game/Fight/BattleManager.cpp
+        Game/Fight/BattleManager.h
+        Game/Characters/Character.cpp
+        Game/Characters/Character.h
+        Game/World/World.cpp
+        Game/World/World.h
+        Game/World/Station.cpp
+        Game/World/Station.h
 )
