--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,16 @@
 cmake_minimum_required(VERSION 3.10)
 project(rpg_game)
+include(FetchContent)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Создаем папку data, если ее нет
-file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/data)
+file(GLOB MY_SOURCES "src/*.cpp")
+add_executable(rpg_game ${MY_SOURCES})
 
-# Копируем файлы данных
-configure_file(data/character_data.txt ${CMAKE_BINARY_DIR}/data/character_data.txt COPYONLY)
 
-add_executable(rpg_game
-        src/main.cpp
-        src/character.cpp
-        src/game.cpp
-        src/utils.cpp
-        include/AssetManager.h
-        src/AssetManager.cpp
-)
+FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.12.0/json.tar.xz)
+FetchContent_MakeAvailable(json)
 
 target_include_directories(rpg_game PRIVATE include)
+target_link_libraries(rpg_game PRIVATE nlohmann_json::nlohmann_json)
